--- a/src/components/Masonry.css
+++ b/src/components/Masonry.css
@@ -33,7 +33,7 @@
 .masonry>div {
   position: absolute;
   will-change: transform, width, height, opacity;
-  padding: 12px;
+  padding: 0;
 }
 
 .masonry>div>div {
@@ -43,10 +43,10 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  border-radius: 18px;
-  box-shadow: 0px 10px 50px -10px rgba(0, 0, 0, 0.28);
+  border-radius: 0;
+  box-shadow: none;
   transition: 0.3s cubic-bezier(.25,.8,.25,1);
-  border: 2px solid rgba(255,255,255,0.09);
+  border: none;
 }
 
 .masonry>div>div:hover {
